<resources>
    <string name="app_name">Github User App</string>

    <string name="lbl_name">Name</string>
    <string name="lbl_company">Company</string>
    <string name="lbl_location">Location</string>
    <string name="lbl_twitter">Twitter</string>
    <string name="lbl_bio">Bio</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_blog">Blog</string>
    <string name="lbl_repository">Repository</string>
    <string name="lbl_gists">Gists</string>
    <string name="lbl_follower">Follower</string>
    <string name="lbl_following">Following</string>
    <string name="lbl_username">Username</string>
    <string name="lbl_html_url">Html Url</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_favorite">Favorite</string>
    <string name="lbl_dark_mode">Dark Mode</string>
    <string name="lbl_light_mode">Light Mode</string>

    <string name="menu_1">Search</string>
    <string name="search_hint">Search By username</string>
    <string name="search_found">Data Found : </string>
    <string name="error_5.x.x">Internal Server Error</string>
    <string name="error_no_connection">No internet connection</string>


    <string name="example_lbl_list">List user</string>
    <string name="example_lbl_detail">Hello this page detail user</string>
    <string name="example_lbl_number">4789</string>

</resources>